--- a/SkeeBall.vcxproj.filters
+++ b/SkeeBall.vcxproj.filters
@@ -219,4 +219,21 @@
   <ItemGroup>
     <Library Include="raylib.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="screenshots\01.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="screenshots\02.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="screenshots\03.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="screenshots\mole.gif">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.MD" />
+  </ItemGroup>
 </Project>
